# T-esTriste

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: helper.cmake
src/: CMakeLists.txt
src/TesTriste/: CMakeLists.txt  TesTriste.cpp
src/apps/: CMakeLists.txt
src/apps/TesTriste/: CMakeLists.txt  TesTriste.cpp
src/libs/: CMakeLists.txt
src/libs/Glad/: CMakeLists.txt
src/libs/Glad/include/glad/: glad.h
src/libs/Glad/src/: glad.c
src/libs/Imgui/: CMakeLists.txt  imgui_impl_glfw.cpp
src/libs/TesTristeLib/: CMakeLists.txt  TesTristeExport.hpp
src/libs/TesTristeLib/Core/: Application.cpp  Application.hpp  Input.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp  gl.hpp
src/libs/TesTristeLib/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
